fix: made style changes to account for dark modes

--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -265,6 +265,7 @@ code{
   background-color:transparent;
   /* color:palegreen; */
   color:#007E71;
+  white-space: nowrap;
   border:1px solid #eeeeee;
   border-radius:2px;
 }
@@ -390,4 +391,11 @@ h4 .highlighter-container:before{
 	body img{
 		opacity:.9;
 	}
+
+  code{
+    /* code in dark mode */
+    border-color: #eeeeee22;
+    background-color: #007E7133;
+  }
+
 }
