--- a/css/now-styles.css
+++ b/css/now-styles.css
@@ -44,20 +44,23 @@
   font-family: 'Poppins', sans-serif;
   padding: 3px 8px;
   border-radius:2px;
-  background-color: #e2a3a3;
+  background-color: #ffc2c2;
   color:white;
   font-size:14px;
   display:none;
 }
+/* personal badges */
 .p .item-category-badge.personal-badge{
   display:block;
 }
+/* terrabyte badges */
 .item-category-badge.terrabyte-badge{
   background-color:#0A8C61;
 }
 .tb .item-category-badge.terrabyte-badge{
   display:block;
 }
+/* golden harp media badges */
 .item-category-badge.goldenharpmedia-badge{
   background-color:#ffcc00;
 }
@@ -67,4 +70,28 @@
 
 .item-row h3{
   margin-bottom:0px;
+}
+/* responsive styles */
+@media only screen and (max-width: 865px){
+  .item-header.align-center{
+    align-items:initial;
+  }
+  .item-category-badge span{
+    display:none;
+  }
+}
+
+/*dark mode styles*/
+@media (prefers-color-scheme: dark) and (min-width: 865px){
+  .item-category-badge{
+    background-color: transparent!important;
+    border:1px solid #ffc2c2;
+  }
+  .item-category-badge.terrabyte-badge{
+    
+    border-color:#0A8C61;
+  }
+  .item-category-badge.goldenharpmedia-badge{
+    border-color:#ffcc00;
+  }
 }
